reorganisation des btn menu

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -28,7 +28,7 @@
     <header>
       <div class="head-bande">
         <div class="header-arrow">
-          <a href="page_accueil.html">
+          <a href="index.html">
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
@@ -56,9 +56,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Tartare de poulpe acidulé</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Aux zests d'orange</p>
+            </div>
+            <div class="menu-btn-price">
               <span>25€</span>
             </div>
             <div class="btn_valider">
@@ -68,9 +68,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Velouté de légumes d'antan</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Carotte, panais, topinambour</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -80,9 +80,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Soupe à l'oignon</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Revisitée</p>
+            </div>
+            <div class="menu-btn-price">
               <span>20€</span>
             </div>
             <div class="btn_valider">
@@ -95,9 +95,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Coquilles Saint-Jacques</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Accompagnées d'une purée de panais</p>
+            </div>
+            <div class="menu-btn-price">
               <span>40€</span>
             </div>
             <div class="btn_valider">
@@ -107,9 +107,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Magret de canard</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et parmentier de pommes de terres</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -119,9 +119,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Sur son lit de gnocchis aux légumes</p>
+            </div>
+            <div class="menu-btn-price">
               <span>44€</span>
             </div>
             <div class="btn_valider">
@@ -134,9 +134,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Pétales de violettes glacés</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et purée de noisette</p>
+            </div>
+            <div class="menu-btn-price">
               <span>18€</span>
             </div>
             <div class="btn_valider">
@@ -146,9 +146,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Fondant au chocolat</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Revisité</p>
+            </div>
+            <div class="menu-btn-price">
               <span>22€</span>
             </div>
             <div class="btn_valider">
@@ -158,9 +158,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Millefeuille croustillant</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Myrtilles et pâtes d'amande</p>
+            </div>
+            <div class="menu-btn-price">
               <span>23€</span>
             </div>
             <div class="btn_valider">
