PAGES MENU DEFINITIF - mq vérif w3c + PAGE ACCUEIL OK maq centrer spinloader en responsive

--- a/lanote_enchantee.html
+++ b/lanote_enchantee.html
@@ -28,7 +28,7 @@
     <header>
       <div class="head-bande">
         <div class="header-arrow">
-          <a href="page_accueil.html">
+          <a href="index.html">
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
@@ -56,9 +56,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Ravioles de foie gras</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Accompagné de leur crème à la truffe</p>
+            </div>
+            <div class="menu-btn-price">
               <span>25€</span>
             </div>
             <div class="btn_valider">
@@ -68,9 +68,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Caviar osciète</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Sur blini à la farine de blé noir</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -80,9 +80,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Homard et espuma de potiron</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Mariné aux zests d'orange</p>
+            </div>
+            <div class="menu-btn-price">
               <span>20€</span>
             </div>
             <div class="btn_valider">
@@ -95,9 +95,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Noix de coquilles Saint-Jacques</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Sur lit de purée de céleri-rave</p>
+            </div>
+            <div class="menu-btn-price">
               <span>40€</span>
             </div>
             <div class="btn_valider">
@@ -107,9 +107,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Langoustine pôélée</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Purée de patate douce</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -119,9 +119,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Mijoté de queue de boeuf</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et riz sauvage aux zests de citron</p>
+            </div>
+            <div class="menu-btn-price">
               <span>44€</span>
             </div>
             <div class="btn_valider">
@@ -134,9 +134,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Macaron noisette et chocolat</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Glace au caramel brun et sel de Guérande</p>
+            </div>
+            <div class="menu-btn-price">
               <span>18€</span>
             </div>
             <div class="btn_valider">
@@ -146,9 +146,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Baba au rhum revisité</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Avec son coulis de citron</p>
+            </div>
+            <div class="menu-btn-price">
               <span>22€</span>
             </div>
             <div class="btn_valider">
@@ -158,9 +158,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Tarte au citron meringuée</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Destructurée</p>
+            </div>
+            <div class="menu-btn-price">
               <span>22€</span>
             </div>
             <div class="btn_valider">
