--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -28,7 +28,7 @@
     <header>
       <div class="head-bande">
         <div class="header-arrow">
-          <a href="page_accueil.html">
+          <a href="index.html">
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
@@ -56,9 +56,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Fricassée d'escargot</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Au piment d'espelette</p>
+            </div>
+            <div class="menu-btn-price">
               <span>25€</span>
             </div>
             <div class="btn_valider">
@@ -68,9 +68,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Foie gras de canard mi-cuit</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et ses copeaux de truffe noire</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -80,9 +80,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Oeuf au plat</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Assaisonné à la truffe sur lit de caviar</p>
+            </div>
+            <div class="menu-btn-price">
               <span>20€</span>
             </div>
             <div class="btn_valider">
@@ -95,9 +95,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Filet de boeuf aux herbes</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Accompagné de sa ribambelle de légumes</p>
+            </div>
+            <div class="menu-btn-price">
               <span>40€</span>
             </div>
             <div class="btn_valider">
@@ -107,9 +107,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Parmentier de queue de boeuf</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>À la truffe noire sur sa purée de panais</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -119,9 +119,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Filet de turbot</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Aux agrumes</p>
+            </div>
+            <div class="menu-btn-price">
               <span>44€</span>
             </div>
             <div class="btn_valider">
@@ -134,9 +134,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Paris-Brest</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Revisité</p>
+            </div>
+            <div class="menu-btn-price">
               <span>13€</span>
             </div>
             <div class="btn_valider">
@@ -146,9 +146,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Macaron au chocolat d'exception</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et glace à la vanille de Madagascar</p>
+            </div>
+            <div class="menu-btn-price">
               <span>22€</span>
             </div>
             <div class="btn_valider">
@@ -158,9 +158,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Mousse au chocolat</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Au piment d'espelette et à la truffe noire</p>
+            </div>
+            <div class="menu-btn-price">
               <span>23€</span>
             </div>
             <div class="btn_valider">
