--- a/ledelicedes_sens.html
+++ b/ledelicedes_sens.html
@@ -28,7 +28,7 @@
     <header>
       <div class="head-bande">
         <div class="header-arrow">
-          <a href="page_accueil.html">
+          <a href="index.html">
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
@@ -56,9 +56,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Tartare de thon</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Assaisonné au yuzu</p>
+            </div>
+            <div class="menu-btn-price">
               <span>25€</span>
             </div>
             <div class="btn_valider">
@@ -68,9 +68,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Bouchée de homard croustillant</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et sa farandole de petits légumes</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -80,9 +80,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Velouté de cèpes</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Aux truffes</p>
+            </div>
+            <div class="menu-btn-price">
               <span>20€</span>
             </div>
             <div class="btn_valider">
@@ -95,9 +95,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Poulet rôti aux herbes de Provence</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et sa crème de truffe</p>
+            </div>
+            <div class="menu-btn-price">
               <span>40€</span>
             </div>
             <div class="btn_valider">
@@ -107,9 +107,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Langouste rôtie</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et ses légumes de saison</p>
+            </div>
+            <div class="menu-btn-price">
               <span>35€</span>
             </div>
             <div class="btn_valider">
@@ -119,9 +119,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Côte de boeuf Angus</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Et sa purée de panais</p>
+            </div>
+            <div class="menu-btn-price">
               <span>44€</span>
             </div>
             <div class="btn_valider">
@@ -134,9 +134,9 @@
           <div class="menu-btn anim-btn1">
             <div class="menu-btn-titre">
               <h4>Farandole de desserts</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Du chef</p>
+            </div>
+            <div class="menu-btn-price">
               <span>18€</span>
             </div>
             <div class="btn_valider">
@@ -146,9 +146,9 @@
           <div class="menu-btn anim-btn2">
             <div class="menu-btn-titre">
               <h4>Crème brulée</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>Revisitée</p>
+            </div>
+            <div class="menu-btn-price">
               <span>22€</span>
             </div>
             <div class="btn_valider">
@@ -158,9 +158,9 @@
           <div class="menu-btn anim-btn3">
             <div class="menu-btn-titre">
               <h4>Tiramisu</h4>
-            </div>
-            <div class="menu-btn-sstitre">
               <p>À la noisette</p>
+            </div>
+            <div class="menu-btn-price">
               <span>23€</span>
             </div>
             <div class="btn_valider">
