PROJET FINAL VALIDE AU W3C

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -38,7 +38,8 @@
       </div>
       <figure class="header-img">
         <img
-          src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+          src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+          alt=""
         />
       </figure>
     </header>
