--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -38,7 +38,8 @@
       </div>
       <figure class="header-img">
         <img
-          src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          alt=""
         />
       </figure>
     </header>
