--- a/ledelicedes_sens.html
+++ b/ledelicedes_sens.html
@@ -38,7 +38,8 @@
       </div>
       <figure class="header-img">
         <img
-          src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt=""
         />
       </figure>
     </header>
