--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <a href="lapalettedugout.html">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt=""
                 />
                 <div class="new">Nouveau</div>
               </div>
@@ -105,7 +106,8 @@
             <a href="lanote_enchantee.html">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt=""
                 />
                 <div class="new">Nouveau</div>
               </div>
@@ -125,7 +127,8 @@
             <a href="alafrancaise.html">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt=""
                 />
               </div>
               <div class="card_description">
@@ -144,7 +147,8 @@
             <a href="ledelicedes_sens.html">
               <div class="image">
                 <img
-                  src="./Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt=""
                 />
               </div>
               <div class="card_description">
