--- a/lanote_enchantee.html
+++ b/lanote_enchantee.html
@@ -38,7 +38,8 @@
       </div>
       <figure class="header-img">
         <img
-          src="./Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+          src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+          alt=""
         />
       </figure>
     </header>
